YTDB-609: Record Step 1 episode — small-cache-it Maven profile